hdrcalibrator: Dont try to set image description on windows without a surface

Fixes a protocol error on shutdown where the QPlatformWindow is already
gone and with it the wl_surface as well but the QWindow is still alive.
BUG:510789
FIXED-IN:6.5.1